[package]
name = "derive-parse"
version = "0.1.0"
edition = "2021"
authors = ["sam0x17"]
license = "MIT"
keywords = ["derive-syn-parse", "macros", "proc-macros", "syn", "parsing"]
categories = ["development-tools", "development-tools::procedural-macro-helpers", "rust-patterns"]
homepage = "https://sam0x17.dev"
repository = "https://github.com/sam0x17/derive-parse"
description = "A derive macro that derives syn/proc_macro2-compatible Parse implementations for structs and enums. Intended as the spiritual successor to derive-syn-parse."

[dependencies]
